--- a/harp/meta.yaml
+++ b/harp/meta.yaml
@@ -37,7 +37,6 @@ requirements:
 
 about:
   home: https://github.com/stcorp/harp
-  license: GNU GENERAL PUBLIC LICENSE Version 2, June 1991
-  license_family: GPL
+  license: BSD
   license_file: COPYING
 
