Use prerelease versions of CODA/HARP for testing

--- a/coda/meta.yaml
+++ b/coda/meta.yaml
@@ -1,15 +1,14 @@
-{% set version = "2.19" %}
-{% set sha256 = "82b6bda18bb649946a7c7b1ec7b0302e6ae5315d512ae043b0faf998c91222c9" %}
+{% set version = "2.20" %}
+{% set sha256 = "94e218255d988d6789ed46247fead2e649bbeb01b600a030fda8630fdf59cf94" %}
+{% set tag = "2.20-beta" %}
 
 package:
   name: coda
   version: {{ version }} 
 
 source:
-  fn: 3ca3c8baea18150fc7d8b8e3c7936d95d92a6fb7.zip
-  url: https://github.com/stcorp/coda/archive/3ca3c8baea18150fc7d8b8e3c7936d95d92a6fb7.zip
-#  fn : coda-{{ version }}.tar.gz
-#  url: https://github.com/stcorp/coda/releases/download/{{ version }}/coda-{{ version }}.tar.gz
+  fn : coda-{{ version }}.tar.gz
+  url: https://github.com/stcorp/coda/releases/download/{{ tag }}/coda-{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 requirements:
